--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,29 @@
 {
-    "name": "yaroslawww/laravel-international-info",
+    "name": "think.studio/laravel-international-info",
     "description": "International information data set.",
     "keywords": [
         "laravel",
         "international"
     ],
-    "homepage": "https://github.com/yaroslawww/laravel-international-info",
+    "homepage": "https://github.com/dev-think-one/laravel-international-info",
     "license": "MIT",
     "authors": [
         {
             "name": "Yaroslav Georgitsa",
-            "email": "yaroslav.georgitsa@gmail.com",
+            "email": "yg@think.studio",
             "homepage": "https://github.com/yaroslawww",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": "^8.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.2",
-        "orchestra/testbench": "^6.21",
-        "phpunit/phpunit": "^9.5",
-        "psalm/plugin-laravel": "^1.5",
-        "vimeo/psalm": "^4.10"
+        "friendsofphp/php-cs-fixer": "^3.16",
+        "orchestra/testbench": "^8.5",
+        "phpunit/phpunit": "^10.1",
+        "psalm/plugin-laravel": "^2.8",
+        "vimeo/psalm": "^5.11"
     },
     "autoload": {
         "psr-4": {
@@ -37,8 +37,8 @@
     },
     "scripts": {
         "psalm": "vendor/bin/psalm",
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "test": "XDEBUG_MODE=coverage vendor/bin/phpunit --colors=always",
+        "test-coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit --colors=always --coverage-html coverage",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
